<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.example.trainingsapp.app.timer.CustomNumberPicker
        android:id="@+id/numpickerMinutes"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <com.example.trainingsapp.app.timer.CustomNumberPicker
        android:id="@+id/numpickerSeconds"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp" />
</LinearLayout>